<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.postgresql</groupId>
	<artifactId>pljava.app</artifactId>
	<version>1.6.10</version>
	<packaging>pom</packaging>
	<name>Greenplum PL/Java</name>
	<url>http://gpdb.docs.pivotal.io/</url>
	<description>Java stored procedures for Greenplum</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<pljava.pgxs.version>${project.version}</pljava.pgxs.version>
	</properties>

	<organization>
		<name>Pivotal Software, Inc.</name>
		<url>https://pivotal.io/</url>
	</organization>

	<inceptionYear>2003</inceptionYear>

	<licenses>
		<license>
			<name>BSD 3-clause</name>
			<comments>A business-friendly OSD-conformant license</comments>
		</license>
	</licenses>

	<mailingLists>
		<mailingList>
			<name>Mailing list for PL/Java users and developers</name>
			<post>pljava-dev@lists.postgresql.org</post>
			<archive>https://www.postgresql.org/list/pljava-dev/</archive>
			<otherArchives>
				<otherArchive>https://web.archive.org/web/*/http://lists.pgfoundry.org/pipermail/pljava-dev/</otherArchive>
				<otherArchive>news://news.gmane.io/gmane.comp.db.postgresql.pljava</otherArchive>
			</otherArchives>
		</mailingList>
		<mailingList>
			<name>Mailing list for Greenplum developers</name>
			<post>gpdb-dev@greenplum.org</post>
			<archive>http://lists.pgfoundry.org/pipermail/pljava-dev/</archive>
			<otherArchives>
				<otherArchive>https://groups.google.com/a/greenplum.org/forum/#!forum/gpdb-dev</otherArchive>
			</otherArchives>
		</mailingList>
        <mailingList>
			<name>Mailing list for Greenplum users</name>
			<post>gpdb-users@greenplum.org</post>
			<archive>https://groups.google.com/a/greenplum.org/forum/#!forum/gpdb-users</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:https://github.com/greenplum-db/pljava.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:greenplum-db/pljava.git</developerConnection>
		<url>https://github.com/greenplum-db/pljava/tree/master/</url>
	</scm>

	<modules>
		<module>pljava-api</module>
		<module>pljava</module>
		<module>pljava-so</module>
		<module>pljava-ant</module>
		<module>pljava-examples</module>
		<module>pljava-packaging</module>
		<module>pljava-pgxs</module>
	</modules>

	<!-- distributionManagement>
		<site>
			<id>site.pljava.tada.se</id>
			<name>PL/Java Developer Info</name>
			<url>github:http://tada.github.io/pljava/</url>
		</site>
	</distributionManagement -->

	<profiles>
		<profile>
			<id>nashornmod</id>
			<activation>
				<jdk>[15,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<dependencies>
							<dependency>
								<groupId>org.openjdk.nashorn</groupId>
								<artifactId>nashorn-core</artifactId>
								<version>15.4</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.0</version><!-- version requires Java8+ -->
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.0</version><!-- version requires Java 8+ -->
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version><!-- version requires Java 8+ -->
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<release>9</release><!-- we are building for Java 9 -->
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version><!-- version requires Java 8+ -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version><!-- version requires Java 8+ -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.12.1</version><!-- version requires Java 8+ -->
				<configuration>
					<relativizeDecorationLinks>false</relativizeDecorationLinks>
				</configuration>
				<executions>
					<execution>
						<id>attach-descriptor</id>
						<goals>
							<goal>attach-descriptor</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.4.5</version><!-- version requires Java 8+ -->
			</plugin>
		</plugins>
	</reporting>
</project>
